--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -395,6 +395,7 @@ views:
                   infos:
                     - entity: sensor.daily_routine
                 open: false
+                force_update: true
                 items:
                   - entity: input_select.michbaeck
                     name: Ort
@@ -424,6 +425,7 @@ views:
                     #         {{ "Zuletzt: " + states.script.bedtime_actions.attributes.last_triggered|string }}
                     #       {% endif %}
               - type: custom:nmo-row
+                force_update: true
                 head: 
                   entity: binary_sensor.johannes
                   secondary_info: last-changed
@@ -452,6 +454,7 @@ views:
             show_header_toggle: false
             entities:
               - type: custom:nmo-row    # flux
+                force_update: true
                 head: 
                   entity: sensor.flux
                   icon_color: mired
@@ -468,10 +471,17 @@ views:
                           {{ states("sensor.sun_elevation")|int|string + "°" }}
                       - lead: "Einfluss Tageslicht: "
                         template: >-
-                          {{ (100 - states("sensor.lux_aussen_pct")|default(100)|int)|int/2 }}
+                          {% set value = (100 - states("sensor.lux_aussen_pct")|default(100)|int)|int/2 %}
+
+                          {% if value > 0 %}
+                            {{ "+" + value|int|string  }}
+                          {% else %}
+                            {{ value }}
+                          {% endif %}
 
                   - entity: input_number.flux_adjust
               - type: custom:nmo-row    # kueche
+                force_update: true
                 head: 
                   entity: light.kueche
                   name: Küche
@@ -492,6 +502,7 @@ views:
                   - entity: binary_sensor.motion_kueche_helper
                     name: helper
               - type: custom:nmo-row    # flur
+                force_update: true
                 head: 
                   entity: light.flur
                   name: Flur
@@ -514,6 +525,7 @@ views:
                   - entity: input_boolean.motion_flur
                     name: Bewegungsmelder aktivieren
               - type: custom:nmo-row    # bad
+                force_update: true
                 head:  light.bad
                 items: 
                   - entity: sensor.light_bad
@@ -528,6 +540,7 @@ views:
                   - entity: input_boolean.motion_bad
                     name: Bewegungsmelder aktivieren
               - type: custom:nmo-row    # wohnzimmer
+                force_update: true
                 head: 
                   entity: light.wohnzimmer
                   name: Wohnzimmer
@@ -536,6 +549,7 @@ views:
                     entity: light.wohnzimmer
                     name: Dimmer
               - type: custom:nmo-row    # michbaeck auto
+                force_update: true
                 head: 
                   entity: light.michbaeck_auto
                   name: AutoDimmer michbaeck
@@ -582,6 +596,7 @@ views:
                 #.   secondary_info: entity-id
                 open: false
               - type: custom:nmo-row    # michbaeck lights
+                force_update: true
                 head: 
                   entity: light.michbaeck
                   name: Lampen michbaeck
@@ -645,15 +660,18 @@ views:
             show_header_toggle: false
             entities:
               - type: custom:nmo-row
+                force_update: true
                 head:
                   entity: sensor.temp_aussen
                   icon_color: temp
               - type: custom:nmo-row
+                force_update: true
                 head:
                   entity: sensor.temp_flur
                   icon_color: temp
               - type: divider
-              - type: custom:nmo-row    # kueche
+              - type: custom:nmo-row    # climate kueche
+                force_update: true
                 head: 
                   entity: climate.kueche
                   name: Küche
@@ -673,7 +691,8 @@ views:
                     name: Gespeicherte Temperatur
                     icon: mdi:temperature-celsius
                     icon_color: temp
-              - type: custom:nmo-row    # bad
+              - type: custom:nmo-row    # climate bad
+                force_update: true
                 head: 
                   entity: climate.bad
                   name: Bad
@@ -690,7 +709,8 @@ views:
                     name: Gespeicherte Temperatur
                     icon: mdi:temperature-celsius
                     icon_color: temp
-              - type: custom:nmo-row    # michbaeck
+              - type: custom:nmo-row    # climate michbaeck
+                force_update: true
                 head: 
                   entity: climate.michbaeck
                   name: michbaeck
@@ -699,6 +719,8 @@ views:
                     - template: >-
                         {% if not is_state("variable.climate_michbaeck_state", "on") %}
                           {{ states("variable.climate_michbaeck_state")|replace("unknown","Status unbekannt") }}
+                        {% else %}
+                          {{ "" }}
                         {% endif %}
                 items: 
                   - entity: sensor.temp_michbaeck
@@ -722,14 +744,16 @@ views:
                     name: Gespeicherte Temperatur
                     icon: mdi:temperature-celsius
                     icon_color: temp
-              - type: custom:nmo-row    # michbaeck AC
+              - type: custom:nmo-row    # climate michbaeck AC
+                force_update: true
                 head: 
                   entity: climate.michbaeck_ac
                   name: michbaeck AC
                   icon_color: climate
                 items: 
                   - entity: fan.michbaeck
-              - type: custom:nmo-row
+              - type: custom:nmo-row    # climate settings
+                force_update: true
                 head:
                   type: section
                   label: Einstellungen
@@ -743,6 +767,8 @@ views:
                       - template: >-
                           {% if not is_state("variable.climate_home_state", "on") %}
                             {{ states("variable.climate_home_state")|replace("unknown","Status unbekannt") }}
+                          {% else %}
+                            {{ "" }}
                           {% endif %}
           - type: glance
             # title: Türen & Fenster
@@ -785,6 +811,7 @@ views:
         show_header_toggle: false
         entities:
           - type: custom:nmo-row    # plant 1
+            force_update: true
             group_config:
               secondary_info: last-changed
             head: 
@@ -794,8 +821,8 @@ views:
               icon_color: plant
               infos:
                 - template: >
-                    {% if state_attr("automation.plant_water", "last_triggered") is not none %}
-                      {{ as_timestamp(state_attr("automation.plant_water", "last_triggered"))|timestamp_custom("%A %H:%M") }}
+                    {% if as_timestamp(states.switch.plant_michbaeck_1_water.last_changed)|int > states("variable.homeassistant_starttime")|int %}
+                      {{ as_timestamp(states.switch.plant_michbaeck_1_water.last_changed)|timestamp_custom("%A %H:%M") }}
                     {% endif %}
                   # attribute: last_triggered
                   lead: "Zuletzt gegossen:"
@@ -812,6 +839,7 @@ views:
                     lead: "Wassertank: "
 
           - type: custom:nmo-row    # plant 2
+            force_update: true
             group_config:
               secondary_info: last-changed
             head: 
@@ -821,8 +849,8 @@ views:
               icon_color: plant
               infos:
                 - template: >
-                    {% if state_attr("automation.plant_water", "last_triggered") is not none %}
-                      {{ as_timestamp(state_attr("automation.plant_water", "last_triggered"))|timestamp_custom("%A %H:%M") }}
+                    {% if as_timestamp(states.switch.plant_michbaeck_2_water.last_changed)|int > states("variable.homeassistant_starttime")|int %}
+                      {{ as_timestamp(states.switch.plant_michbaeck_2_water.last_changed)|timestamp_custom("%A %H:%M") }}
                     {% endif %}
                 # - entity: automation.plant_2_water
                 #   attribute: last_triggered
@@ -839,6 +867,7 @@ views:
                   - entity: binary_sensor.plant_michbaeck_2_water
                     lead: "Wassertank: "
           - type: custom:nmo-row    # settings
+            force_update: true
             head:  
               type: section
               label: Einstellungen
@@ -872,6 +901,7 @@ views:
           - entity: switch.computer
             secondary_info: last-changed
           - type: custom:nmo-row
+            force_update: true
             head:
               entity: switch.drucker
               # secondary_info: last-changed
@@ -885,6 +915,7 @@ views:
                 name: SleepTimer starten
           
           - type: custom:nmo-row
+            force_update: true
             head:
               entity: switch.loetkolben
               # secondary_info: last-changed
@@ -1130,6 +1161,7 @@ views:
               - entity: calendar.arbeit
               - entity: binary_sensor.workday_sensor
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Einstellungen
@@ -1154,6 +1186,7 @@ views:
           - type: entities
             entities:
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Details
@@ -1305,6 +1338,7 @@ views:
             # title: ESP disconnects
             entities:
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: ESP disconnects
@@ -1317,6 +1351,7 @@ views:
                   - sensor.esp10_disconnects
                   - sensor.esp11_disconnects
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: ESP Recovery
@@ -1337,6 +1372,7 @@ views:
             show_header_toggle: false
             entities:
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Debug states
@@ -1347,6 +1383,7 @@ views:
                   - entity: input_boolean.debug_attributes
               # - type: divider
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Debug services
@@ -1368,6 +1405,7 @@ views:
         title: ESP nodes
         entities:
           - type: custom:nmo-row
+            force_update: true
             head: sensor.esp01
             items: 
               - entity: sensor.esp01
@@ -1391,6 +1429,7 @@ views:
                   - last_disconnect
                   - last_boot_cause
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Sensoren/Geräte
@@ -1402,6 +1441,7 @@ views:
 
           - type: divider
           - type: custom:nmo-row
+            force_update: true
             head: sensor.esp02
             items: 
               - entity: sensor.esp02
@@ -1425,6 +1465,7 @@ views:
                   - last_disconnect
                   - last_boot_cause
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Sensoren/Geräte
@@ -1435,6 +1476,7 @@ views:
 
           - type: divider
           - type: custom:nmo-row
+            force_update: true
             head: sensor.esp04
             items: 
               - entity: sensor.esp04
@@ -1458,6 +1500,7 @@ views:
                   - last_disconnect
                   - last_boot_cause
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Sensoren/Geräte
@@ -1467,6 +1510,7 @@ views:
 
           - type: divider
           - type: custom:nmo-row
+            force_update: true
             head: sensor.esp05
             items: 
               - entity: sensor.esp05
@@ -1490,6 +1534,7 @@ views:
                   - last_disconnect
                   - last_boot_cause
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Sensoren/Geräte
@@ -1501,6 +1546,7 @@ views:
 
           - type: divider
           - type: custom:nmo-row
+            force_update: true
             head: sensor.esp07
             items: 
               - entity: sensor.esp07
@@ -1524,6 +1570,7 @@ views:
                   - last_disconnect
                   - last_boot_cause
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Sensoren/Geräte
@@ -1556,6 +1603,7 @@ views:
 
           - type: divider
           - type: custom:nmo-row
+            force_update: true
             head: sensor.esp10
             items: 
               - entity: sensor.esp10
@@ -1579,6 +1627,7 @@ views:
                   - last_disconnect
                   - last_boot_cause
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Sensoren/Geräte
@@ -1592,6 +1641,7 @@ views:
 
           - type: divider
           - type: custom:nmo-row
+            force_update: true
             head: sensor.esp11
             items: 
               - entity: sensor.esp11
@@ -1615,6 +1665,7 @@ views:
                   - last_disconnect
                   - last_boot_cause
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Sensoren/Geräte
@@ -1625,6 +1676,7 @@ views:
                     
           - type: divider
           - type: custom:nmo-row
+            force_update: true
             head: sensor.esp20
             items: 
               - entity: sensor.esp20
@@ -1648,6 +1700,7 @@ views:
                   - last_disconnect
                   - last_boot_cause
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Sensoren/Geräte
@@ -1661,6 +1714,7 @@ views:
                   
           - type: divider
           - type: custom:nmo-row
+            force_update: true
             head: sensor.esp22
             items: 
               - entity: sensor.esp22
@@ -1684,6 +1738,7 @@ views:
                   - last_disconnect
                   - last_boot_cause
               - type: custom:nmo-row
+                force_update: true
                 head:
                   type: section
                   label: Sensoren/Geräte
@@ -1712,6 +1767,7 @@ views:
         type: entities
         entities:
           - type: custom:nmo-row
+            force_update: true
             head:
               entity: group.all_devices
               group_config:
@@ -1807,6 +1863,7 @@ views:
         title: All Inputs
         entities:
           - type: custom:nmo-row
+            force_update: true
             head:
               type: section
               label: Boolean
@@ -1833,6 +1890,7 @@ views:
               - entity: input_boolean.wecker_toggle
           # - id: input_select_fold
           - type: custom:nmo-row
+            force_update: true
             head:
               type: section
               label: Select
@@ -1848,6 +1906,7 @@ views:
               - entity: input_select.theme
           # - id: input_number_fold
           - type: custom:nmo-row
+            force_update: true
             head:
               type: section
               label: Number
@@ -1874,6 +1933,7 @@ views:
               - entity: input_number.wecker_fading
           # - id: input_datetime_fold
           - type: custom:nmo-row
+            force_update: true
             head:
               type: section
               label: DateTime
@@ -1898,6 +1958,7 @@ views:
               - entity: input_datetime.climate_7_end
           # - id: input_text_fold
           - type: custom:nmo-row
+            force_update: true
             head:
               type: section
               label: Text
